--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  setup:
+  dis-redirect-proxy-setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,48 +22,49 @@ jobs:
           go-version: '1.24.2'
 
   dis-redirect-proxy-audit:
-    needs: setup
+    needs: dis-redirect-proxy-setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Run GoList
+      - name: Generate Go Module List
         run:  go list -json -m all > go.list
-      - name: Run up nancy
+      - name: Run audit check with Nancy
         uses: sonatype-nexus-community/nancy-github-action@main
         with:
           nancyVersion: "v1.0.48"
 
   dis-redirect-proxy-build:
-    needs: setup
+    needs: dis-redirect-proxy-setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Run build checks
+      - name: Run build test
         run: make build
 
   dis-redirect-proxy-lint:
-    needs: setup
+    needs: dis-redirect-proxy-setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - uses: golangci/golangci-lint-action@v3
+      - name: Run lint checks
+        uses: golangci/golangci-lint-action@v3
         with:
           version: v1.64.6
 
   dis-redirect-proxy-unit:
-    needs: setup
+    needs: dis-redirect-proxy-setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Run unit checks
+      - name: Run unit tests
         run: make test
 
   dis-redirect-proxy-component:
-    needs: setup
+    needs: dis-redirect-proxy-setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
