--- a/ci/build.yaml
+++ b/ci/build.yaml
@@ -5,7 +5,7 @@ image_resource:
   type: registry-image
   source:
     repository: golang
-    tag: 1.25.2-bullseye
+    tag: 1.24.11-bookworm
     registry_mirror:
       host: ((ecr_repository_uri))
     aws_access_key_id: ((aws_access_key_id))
