Update tag location

--- a/ci/concourse.yaml
+++ b/ci/concourse.yaml
@@ -3,7 +3,7 @@ application:
 helm:
   repo_name: dis-helm-legacy-chart
   values_files:
-    image_tag_key: disRedirectProxyTag
+    image_tag_key: dis-redirect-proxy.image.tag
     sandbox:
       - values/dis-sandbox-internal.yaml
       - values/dis-sandbox-external.yaml
